--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coreui/react": "^4.11.0",
     "axios": "^1.6.2",
     "next": "14.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-responsive-carousel": "^3.2.23",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "eslint": "^8",
