--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-responsive-carousel": "^3.2.23",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
